--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -32,8 +32,10 @@ jobs:
         distribution: 'temurin'
         cache: gradle
     
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+      with:
+        gradle-version: 8.5
     
     - name: Extract version from tag or input
       id: version
