add bossbar config, airbar

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -82,6 +82,8 @@ notifications:
 
 # Display settings
 display:
+  #enable
+  enable: true
   # BossBar settings
   bossbar:
     # Sử dụng màu hex như mong muốn
